--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
   "name": "spotify",
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.4.1",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "node src/index.js"
+  },
+  "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
+    "axios": "^1.10.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "fs-extra": "^11.3.0",
+    "https": "^1.0.0",
+    "mkcert": "^3.2.0",
+    "node-persist": "^4.0.4"
+  }
 }
