--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotify",
-  "packageManager": "yarn@4.4.1",
+  "version": "1.0.0",
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js"
@@ -14,5 +14,6 @@
     "https": "^1.0.0",
     "mkcert": "^3.2.0",
     "node-persist": "^4.0.4"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
