--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^1.10.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "fs-extra": "^11.3.0",
     "https": "^1.0.0",
     "mkcert": "^3.2.0",
+    "mongodb": "^6.17.0",
     "node-persist": "^4.0.4"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
