--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,21 @@ services:
     ports:
       - "3005:3005"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
       - PORT=3005
       - HOSTNAME=0.0.0.0
       - LOG_LEVEL=debug
+    env_file:
+      - .env
+    networks:
+      - services_default
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3005"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://0.0.0.0:3005"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
+
+networks:
+  services_default:
+    external: true
